Implement tweet feature

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,10 @@ services:
     restart: always
     networks:
       - dev-db
+  mailhog:
+    image: mailhog/mailhog
+    ports:
+      - 8025:8025
+      - 1025:1025
 networks:
   dev-db:
