--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "classnames": "2.3.2",
     "geist": "^1.3.0",
+    "immer": "9.0.21",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "nodemailer": "6.9.1",
